@@ -58,7 +58,7 @@ class RssServiceTest {
         assertEquals("http://example.com", result.getLink());
         assertNotNull(result.getItems());
         assertEquals(1, result.getItems().size());
-        assertEquals("Item Title", result.getItems().getFirst().getTitle());
+        assertEquals("Item Title", result.getItems().get(0).getTitle());
     }
 
     @Test
@@ -116,7 +116,7 @@ class RssServiceTest {
         assertEquals("http://example.com", result.getLink());
         assertNotNull(result.getItems());
         assertEquals(1, result.getItems().size());
-        assertEquals("Item Title", result.getItems().getFirst().getTitle());
+        assertEquals("Item Title", result.getItems().get(0).getTitle());
     }
 
     @Test
